# asset-extractor

./: .babelrc  .gitignore  README.md  package.json
.github/workflows/: publish-draft.yml  test-push-and-pr.yml
src/: app.tsx  index.html  index.tsx  multistep.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bundle.rs  error.rs  keys.rs  main.rs  mods.rs  ninres.rs  xci.rs
src/steps/: asset-select.tsx  extract-progress.tsx  intro.tsx
