[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.2" }

[dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }
itertools = "0.10"
nfd2 = "0.3"
ninres = { git = "https://github.com/Tarnadas/ninres-rs.git", features = ["bfres", "sarc", "zstd"] }
rayon = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
tauri = { version = "1.0.0-beta.5", features = ["api-all"] }
tempfile = "3"
thiserror = "1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.ninres]
opt-level = 3

[profile.dev.package.tar]
opt-level = 3
