[package]
name = "app"
version = "0.3.0"
description = "Shroom Kingdom Asset Extractor"
authors = ["Shroom Kingdom <info@shroomkingdom.net>"]
license = "MIT"
repository = "https://github.com/Shroom-Kingdom/asset-extractor"
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dependencies]
dirs = "4"
glob = "0.3"
image = { version = "0.24", default-features = false, features = ["png"] }
itertools = "0.10"
nfd2 = "0.3"
ninres = { git = "https://github.com/Tarnadas/ninres-rs.git", features = ["bfres", "sarc", "zstd"] }
pathdiff = "0.2"
rayon = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
tauri = { version = "1.0.0-rc.9", features = ["api-all"] }
tempfile = "3"
thiserror = "1"
zip = "0.6"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package.'*']
opt-level = 3
